[gd_scene load_steps=6 format=2]

[ext_resource path="res://shared/attacks/fireLightningAttack/fireBall/FireBall.gd" type="Script" id=1]
[ext_resource path="res://shared/attacks/fireLightningAttack/fireBall/fireMine.png" type="Texture" id=2]
[ext_resource path="res://shared/attacks/fireLightningAttack/fireBall/laser.png" type="Texture" id=3]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 0, -220 )
b = Vector2( 0, 220 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, -220 )
b = Vector2( 0, 220 )

[node name="FireBall" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="FireMine" type="Sprite" parent="." index="0"]

position = Vector2( -0.0803808, -1.88949 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 2 )

[node name="Laser1" type="Sprite" parent="." index="3"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Laser2" type="Sprite" parent="." index="4"]

rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Tween1" type="Tween" parent="." index="5"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Tween2" type="Tween" parent="." index="6"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="." to="." method="_on_FireBall_body_entered"]


